2009-08-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 2841419 ] Memory leak during chunked ec call

2009-08-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c, providerRegister.c, providerRegister.h:
	[2840374] Specify user for provider processes

2009-08-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* context.c:
	[2833542] Possible leak in CMPIContext addEntry
	(based on patch from Gokul)

2009-08-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, mlog.c, mlog.h:
	[2833403] sfcc calls unable to log

2009-08-05  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* cimXmlGen.c
	[ 2727830 ] No valid variable in error message in cimXmlGen.c 

2009-07-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2825221 ] No validation for PersistenceType property
	(take 2)

	* test/xml/indCIMXMLHandler-verify_PersistenceType.*
	Test for above fix

2009-07-28  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* cimXmlGen.c:
	[ 2826620 ] Memory leak while generating responses.

2009-07-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.c:
	[ 2827800 ] SfcbBroker Library crashes in Local mode communication
	(patch by Rajib Saha)

2009-07-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2823219 ] doHttpRequest Segfault when Protocol field is NULL

2009-07-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpios.h
	[ 2825365 ] class provider crashing on 64 bit machines
	(patch from Surendra Kodali)

2009-07-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am
	[2802113] make footprint doesn't account for .so files
	(patch from Pratayusha Doddapaneni)

2009-07-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/ABT/MonitorABT
	[2821718] Former reports included in the report zip file if ABT fails
	(patch from Pratayusha Doddapaneni)

2009-06-25  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* fileRepository.c: