@@ -1,3 +1,9 @@
+2009-08-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* providerDrv.c, providerRegister.c, providerRegister.h, 
+	sfcb.cfg.pre.in, control.c:
+	[2840374] Specify user for provider processes
+
 2009-08-20  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* cimXmlRequest.c:
